--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:gh": "NODE_ENV=production npm run build",
     "preview": "vite preview",
+    "deploy:gh": "npm run build:gh && gh-pages -d dist",
     "cap:add": "npx cap add android",
     "cap:sync": "npx cap sync",
     "cap:open": "npx cap open android",
@@ -16,6 +18,7 @@
     "@capacitor/android": "^5.5.1",
     "@capacitor/cli": "^5.5.1",
     "@capacitor/core": "^5.5.1",
+    "gh-pages": "^6.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   },
