--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "build:gh": "NODE_ENV=production npm run build",
     "preview": "vite preview",
-    "deploy:gh": "npm run build:gh && gh-pages -d dist",
+    "deploy:gh": "npm run build:gh && gh-pages -d docs",
     "cap:add": "npx cap add android",
     "cap:sync": "npx cap sync",
     "cap:open": "npx cap open android",
